:art:Fixed navbar scrolling out of viewport (#13)

--- a/src/Components/Main/Module/Module.css
+++ b/src/Components/Main/Module/Module.css
@@ -6,8 +6,8 @@
 .module-cards{
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
-  grid-gap: 15px;
-  margin-top: 25px;
+  grid-gap: 10px;
+  margin-top: 15px;
 }
 
 .module-cards > button{
